[package]
name = "dsf-ws"
version = "0.1.0"
authors = ["Tsukasa Arima <pyar6329@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.20.0", features = ["tokio-comp"] }
