[package]
name = "dsf-chat"
version = "0.1.0"
authors = ["Tsukasa Arima <pyar6329@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.5"
redis = { version = "0.20.0", features = ["tokio-comp"] }
chat-proto = { git = "https://github.com/pyar6329/chat-proto.git", rev = "fa53495379b6e20a2ecf47d4c4a66777a85cc4b5" }
